opam-version: "1.2"
name: "blockexplorer"
version: "1.0"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
authors: ["Vincent Bernardoff <vb@luminar.eu.org>"]
homepage: "https://github.com/vbmithr/ocaml-blockexplorer"
doc: "https://vbmithr.github.io/ocaml-blockexplorer/doc"
license: "ISC"
dev-repo: "https://github.com/vbmithr/ocaml-blockexplorer.git"
bug-reports: "https://github.com/vbmithr/ocaml-blockexplorer/issues"
tags: []
available: [ ocaml-version >= "4.03.0" ]
depends: [
  "jbuilder" {build & >= "1.0+beta8"}
  "base" {>= "v0.9"}
  "base58" {>= "1.0"}
  "ptime" {>= "0.8.3"}
  "ezjsonm" {>= "0.4.3"}
  "ocplib-json-typed" {>= "0.5"}
]
build: [ "jbuilder" "build" "@install" ]